--- a/client/assets/scss/styles.scss
+++ b/client/assets/scss/styles.scss
@@ -1,8 +1,8 @@
 @import 'var';
 @import 'mixins';
-#title {
+body {
     padding: 30px;
-    font-size: 50px;
+    font-size: 25px;
     color: $deepblue;
     text-align: center;
 }
